src/objects/Hardware_Software__c.object
<CustomObject>
    <fields>
        <fullName>GIS_Framework_Version__c</fullName>
        <label>GIS Framework Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.0</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geo_Installed_Production__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geo Installed - Production?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo_Installed_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geo Installed - Test?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geo_Installed_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geo Installed - Training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HD_size_free_IMC_Share__c</fullName>
        <label>HD size free IMC Share</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HD_size_free_on_C__c</fullName>
        <label>HD size free on C:\</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HD_size_total_IMC_Share__c</fullName>
        <label>HD size total IMC Share</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HD_size_total_on_C__c</fullName>
        <label>HD size total on C:\</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hardware_Status_WMP__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMC_Version__c</fullName>
        <label>IMC Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>6.7.10</fullName>
                </value>
                <value>
                    <fullName>6.7.9</fullName>
                </value>
                <value>
                    <fullName>6.7.8</fullName>
                </value>
                <value>
                    <fullName>6.7.7</fullName>
                </value>
                <value>
                    <fullName>6.7.6</fullName>
                </value>
                <value>
                    <fullName>6.7.5</fullName>
                </value>
                <value>
                    <fullName>6.7.4</fullName>
                </value>
                <value>
                    <fullName>6.7.3</fullName>
                </value>
                <value>
                    <fullName>6.7.2</fullName>
                </value>
                <value>
                    <fullName>6.7.1</fullName>
                </value>
                <value>
                    <fullName>6.7</fullName>
                </value>
                <value>
                    <fullName>6.6.12</fullName>
                </value>
                <value>
                    <fullName>6.6.11</fullName>
                </value>
                <value>
                    <fullName>6.6.10.5</fullName>
                </value>
                <value>
                    <fullName>6.6.10.4</fullName>
                </value>
                <value>
                    <fullName>6.6.10.3</fullName>
                </value>
                <value>
                    <fullName>6.6.10.2</fullName>
                </value>
                <value>
                    <fullName>6.6.10.1</fullName>
                </value>
                <value>
                    <fullName>6.6.10</fullName>
                </value>
                <value>
                    <fullName>6.6.9</fullName>
                </value>
                <value>
                    <fullName>6.6.8</fullName>
                </value>
                <value>
                    <fullName>6.6.7</fullName>
                </value>
                <value>
                    <fullName>6.6</fullName>
                </value>
                <value>
                    <fullName>6.5.9</fullName>
                </value>
                <value>
                    <fullName>6.5.8</fullName>
                </value>
                <value>
                    <fullName>6.5.7</fullName>
                </value>
                <value>
                    <fullName>6.5.6</fullName>
                </value>
                <value>
                    <fullName>6.4.13</fullName>
                </value>
                <value>
                    <fullName>6.4.12</fullName>
                </value>
                <value>
                    <fullName>6.4.11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IMP_ATLAS_CLIENT__c</fullName>
        <label>ATLAS (CLIENT)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_ATLAS_SERVER__c</fullName>
        <label>ATLAS (SERVER)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_Academy_System__c</fullName>
        <label>Academy System</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_Advanced_Mobile_Online__c</fullName>
        <label>Advanced Mobile Online</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_Authentication__c</fullName>
        <label>Authentication</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_Bar_Coding__c</fullName>
        <label>Bar Coding</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_Comm_Server__c</fullName>
        <label>Comm Server</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_Biometrics__c</fullName>
        <label>Biometrics</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_CAD_Incident_Data_Export__c</fullName>
        <label>CAD Incident Data Export</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_Comnetix_LiveScan_CardScan__c</fullName>
        <label>Comnetix LiveScan/CardScan</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_Coplogic__c</fullName>
        <label>Coplogic</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_E911__c</fullName>
        <label>E911</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_NCIC__c</fullName>
        <label>NCIC</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_NIEM_Data_Exchange__c</fullName>
        <label>NIEM Data Exchange</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_NYS_TRACS_Products__c</fullName>
        <label>NYS TRACS Products</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_N_DEX_Data_Exchange__c</fullName>
        <label>N-DEX Data Exchange</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_PICTOMETRY__c</fullName>
        <label>PICTOMETRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_Priority_Dispatch_Pro_QA_EMD__c</fullName>
        <label>Priority Dispatch Pro QA EMD</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_Red_Alert_Incident_Per_Fire_Agen__c</fullName>
        <label>Red Alert Incident Per Fire Agency</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_INT_SEI_Court__c</fullName>
        <label>SEI Court</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_IRIS_IMPACT_Remote_Intel_Service__c</fullName>
        <label>IRIS (IMPACT Remote Intel Service)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_Jewelry_Pawn_Shop_System__c</fullName>
        <label>Jewelry/Pawn Shop System</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_Mobile_Ticketing_IMT__c</fullName>
        <label>Mobile Ticketing (IMT)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_Public_Safety_Records_Mgmt_Software__c</fullName>
        <label>Public Safety Records Mgmt Software</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_Taxi_Limonsine_Permiting_System__c</fullName>
        <label>Taxi &amp; Limonsine Permiting System</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_VCAD_Visual_Computer_Aided_Dispatch__c</fullName>
        <label>VCAD (Visual Computer Aided Dispatch)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMP_VSTAT__c</fullName>
        <label>VSTAT</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Addresses__c</fullName>
        <label>IP Addresses</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IQ_Version__c</fullName>
        <label>IQ Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Staff__c</fullName>
        <label>IT Staff</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>On-Site</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inform_Me_Version__c</fullName>
        <label>Inform Me Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jail_Additional_Information__c</fullName>
        <label>Jail Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Jail_Domain_Name__c</fullName>
        <label>Jail Domain Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Jail_OS_Service_Pack__c</fullName>
        <label>Jail OS Service Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Jail_OS__c</fullName>
        <label>Jail OS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jail_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Jail Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Hardware &amp; Software (Jail Product)</relationshipLabel>
        <relationshipName>Hardware_Software6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jail_SQL_Service_Pack__c</fullName>
        <label>Jail SQL Service Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Jail_SQL_Version__c</fullName>
        <label>Jail SQL Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SQL 2012 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Ent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jail_Software_Version__c</fullName>
        <label>Jail Software Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_HWSW_Record_ID__c</fullName>
        <label>Legacy HWSW Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Licensing_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Licensing Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapped_Drive_Share_Name_WMP__c</fullName>
        <label>Mapped Drive Share Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_Network_Locationof_Software_WMP__c</fullName>
        <label>Mapped Network Location of Software</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Misc_Info_WMP__c</fullName>
        <label>Misc Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mobile_Maps_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Maps Enabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Queues__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the Inform CAD customer is on New Queues.</inlineHelpText>
        <label>New Queues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_Area_WMP__c</fullName>
        <label>Notes Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Reporting_Servers__c</fullName>
        <label>Number of Reporting Servers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Users_Per_Product_WMP_del__c</fullName>
        <label>Number of Users Per Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Sub_Hardware_Path_WMP__c</fullName>
        <label>Parent/Sub Hardware Path</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Drive_Location_of_Software_WMP__c</fullName>
        <label>Physical Drive Location of Software</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Memory_Total__c</fullName>
        <label>Physical Memory Total</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Physical_Memory_in_Use__c</fullName>
        <label>Physical Memory in Use</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Release_WMP__c</fullName>
        <label>Planned Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>5.5.0</fullName>
                </value>
                <value>
                    <fullName>5.6.0</fullName>
                </value>
                <value>
                    <fullName>5.6.1</fullName>
                </value>
                <value>
                    <fullName>5.7.0</fullName>
                </value>
                <value>
                    <fullName>5.8.0</fullName>
                </value>
                <value>
                    <fullName>5.9.0</fullName>
                </value>
                <value>
                    <fullName>5.50.0</fullName>
                </value>
                <value>
                    <fullName>5.11.0</fullName>
                </value>
                <value>
                    <fullName>6.0.0</fullName>
                </value>
                <value>
                    <fullName>6.0.1</fullName>
                </value>
                <value>
                    <fullName>6.0.2</fullName>
                </value>
                <value>
                    <fullName>6.0.3</fullName>
                </value>
                <value>
                    <fullName>6.1.0</fullName>
                </value>
                <value>
                    <fullName>6.1.1</fullName>
                </value>
                <value>
                    <fullName>6.2.0</fullName>
                </value>
                <value>
                    <fullName>6.3.0</fullName>
                </value>
                <value>
                    <fullName>6.4.0</fullName>
                </value>
                <value>
                    <fullName>6.5.0</fullName>
                </value>
                <value>
                    <fullName>6.6.0</fullName>
                </value>
                <value>
                    <fullName>6.7.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
                <value>
                    <fullName>911</fullName>
                </value>
                <value>
                    <fullName>Tiburon</fullName>
                </value>
                <value>
                    <fullName>Impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sub-Module</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Sub_Module__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Sub_Module__c</referenceTo>
        <relationshipLabel>Hardware &amp; Software</relationshipLabel>
        <relationshipName>Hardware_Software</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Hardware &amp; Software Environments</relationshipLabel>
        <relationshipName>Hardwares_Softwares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proxy_Hardware_Type__c</fullName>
        <label>Proxy Hardware Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SuperMicro</fullName>
                </value>
                <value>
                    <fullName>OSN Blade on MP-1000</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RMS_DR_Software__c</fullName>
        <label>RMS DR Software</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMS_DR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RMS DR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RMS_Integration_Version__c</fullName>
        <label>RMS Integration Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.10 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.9 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.8 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.2 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.1 C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMS Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Hardware &amp; Software (RMS Product)</relationshipLabel>
        <relationshipName>Hardware_Software5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMS_Software_Version_Patch__c</fullName>
        <label>RMS Software Version Patch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Test_Additional_Information__c</fullName>
        <label>RMS Test Additional Information</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Test_Certificate_Expiration_Date__c</fullName>
        <label>RMS Test Certificate Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMS_Test_Integration_Version__c</fullName>
        <label>RMS Test Integration Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.10 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.9 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.8 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.2 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.1 C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Test_OS_Service_Pack__c</fullName>
        <label>RMS Test OS Service Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Test_OS__c</fullName>
        <label>RMS Test OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Test_SQL_Service_Pack__c</fullName>
        <label>RMS Test SQL Service Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Test_SQL_Version__c</fullName>
        <label>RMS Test SQL Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQL 2012 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Ent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Test_Software_Version_Patch__c</fullName>
        <label>RMS Test Software Version Patch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Test_Software_Version__c</fullName>
        <label>RMS Test Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.10 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.9 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.8 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.2 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16.4 W</fullName>
                    <isActive>false</isActive>
                    <label>RMS 4.16.4 W</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RMS_Training_Additional_Information__c</fullName>
        <label>RMS Training Additional Information</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RMS_Training_Certificate_Expiration_Date__c</fullName>
        <label>RMS Training Certificate Expiration Dat</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMS_Training_Integration_Version__c</fullName>
        <label>RMS  Training Integration Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMS 4.17 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.16 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.15 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.14 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.13 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.12 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11.1 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.11 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.10 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.9 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.8 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.2 C</fullName>
                </value>
                <value>
                    <fullName>RMS 4.7.1 C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>